--- a/TestAutomation/pom.xml
+++ b/TestAutomation/pom.xml
@@ -5,7 +5,24 @@
 	<groupId>com.accenture</groupId>
 	<artifactId>TestAutomation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<build>
+		<!-- Source directory configuration -->
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<!-- Following plugin executes the testng tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<!-- Suite testng xml file to consider for test execution -->
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>						
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 
 		<dependency>
@@ -67,6 +84,7 @@
 			<artifactId>cucumber-testng</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
