--- a/TestAutomation/pom.xml
+++ b/TestAutomation/pom.xml
@@ -15,6 +15,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.14.1</version>
 				<configuration>
+				 <forkMode>never</forkMode>
+				  <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
 					<!-- Suite testng xml file to consider for test execution -->
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>						
